Add module descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Orthogonal Devices
 email: clarkson@orthogonaldevices.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Maker of eurorack modules.
+  Maker of eurorack modules since 2012.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: odevices
