Add jemoji plugin

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ github_username:  odevices
 # Build settings
 theme: minima
 
+plugins:
+  - jemoji
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
